ingress-lb/httpd-ingress.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: httpd-ingress
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: httpd-ingress
  template: 
    metadata: 
      labels: 
        app: httpd-ingress
    spec: 
      containers: 
      - image: httpd 
        imagePullPolicy: IfNotPresent 
        name: httpd-ingress
        ports: 
        - containerPort: 80 
          protocol: TCP 
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-ingress
  labels:
    app: httpd-ingress
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: httpd-ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-ingress
  annotations:
    kubernetes.io/ingress.class: nginx  
spec:
  rules:
  - host: "demo-httpd-ingress.example"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: httpd-ingress
            port:
              number: 80
